--- a/Packs/PAN-OS/Integrations/Panorama/Panorama.yml
+++ b/Packs/PAN-OS/Integrations/Panorama/Panorama.yml
@@ -10344,7 +10344,7 @@ script:
       required: true
       isArray: false
   - name: pan-os-get-certificate-info
-    description: 'Gathers name, expiration date and expiration status of certificates configured locally on a Firewall or pushed from Panorama.'
+    description: 'Gathers name, expiration date and expiration status of certificates configured locally on a Firewall or pushed from Panorama, as seen under Certificate Management'
     arguments:
     - description: Show only expired certificates.
       name: show_expired_only
