--- a/Packs/PAN-OS/Integrations/Panorama/Panorama.yml
+++ b/Packs/PAN-OS/Integrations/Panorama/Panorama.yml
@@ -10344,7 +10344,7 @@ script:
       required: true
       isArray: false
   - name: pan-os-get-certificate-info
-    description: 'Gathers name, expiration date and expiration status of certificates configured locally on a Firewall or pushed from Panorama, as seen under Certificate Management'
+    description: 'Gathers name, expiration date and expiration status of certificates configured locally on a Firewall or pushed from Panorama, as seen under Certificate Management.'
     arguments:
     - description: Show only expired certificates.
       name: show_expired_only
@@ -10375,7 +10375,7 @@ script:
       description: If this certificate was Pushed from Panorama, Local to Firewall or Predefined on Panorama or Firewall.
     - contextPath: Panorama.Certificate.devices_using_certificate
       type: Unknown
-      description: List of devices using this certificate if it was pushed from Panorama.   
+      description: List of devices using this certificate if it was pushed from Panorama.
   dockerimage: demisto/pan-os-python:1.0.0.3545654
   isfetch: true
   runonce: false
